# scshoki

./: .gitignore  README.md  notarize.sh  package.json  pnpm-lock.yaml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  infrastructure.rs  main.rs  services.rs  setup.rs  utils.rs
src-tauri/src/commands/: appium.rs  screenshot.rs  utils.rs
src-tauri/src/config/: constants.rs  device.rs  env.rs
src-tauri/src/infrastructure/: binaries.rs  fs.rs
src-tauri/src/services/: adb.rs  appium.rs  binaries.rs  device.rs  dom.rs  image.rs  logger.rs  network.rs  screenshot.rs  setup.rs  utils.rs  wait.rs  webrdiver.rs
src-tauri/src/services/capabilities/: android.rs  ios.rs
src-tauri/src/services/device/: density.rs  detect.rs  os.rs  udid.rs
src-tauri/src/setup/: ensure.rs  setup.rs
src-tauri/src/utils/: archive.rs  file.rs  image.rs  wait.rs
src/components/: BasicAuthForm.tsx  BrowserSelect.tsx  HiddenElementsForm.tsx  ScreenshotButton.tsx  UrlInputForm.tsx  index.tsx
src/pages/: Home.tsx
src/styles/: _base.scss  main.scss
