[package]
name = "scshoki"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
thirtyfour = "0.35.0"
image = "0.25.5"
log = "0.4.26"
fern = "0.7.1"
chrono = "0.4.40"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["chrono", "fmt", "std", "env-filter"] }
tracing-appender = "0.2"
