[package]
name = "scshoki"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
thirtyfour = "0.35.0"
reqwest = { version = "0.12.14", features = ["blocking", "json"] }
image = "0.25.5"
log = "0.4.26"
chrono = "0.4.40"
log4rs = "1.3.0"
flate2 = "1.1.0"
tar = "0.4.44"
zip = "2.4.2"
rusb = "0.9.4"

[profile.dev]
incremental = true
